--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-cli": "^6.18.0",
     "express": "^4.14.0"
+  },
+  "devDependencies": {
+    "eslint": "^3.12.2"
   }
 }
